tests/ui/coroutine/gen_block.e2024.stderr
error[E0282]: type annotations needed
  --> $DIR/gen_block.rs:6:17
   |
LL |     let x = gen {};
   |                 ^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
